Adding another fake article, continuing to play with Toto features

--- a/templates/pages/article.rhtml
+++ b/templates/pages/article.rhtml
@@ -16,5 +16,8 @@
       <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
     <% end %>
   </section>
+  <p>
+    <a href="/">Home</a>
+  </p>
 </article>
 
