--- a/templates/pages/index.rhtml
+++ b/templates/pages/index.rhtml
@@ -1,20 +1,15 @@
-<section id="articles">
+<ul id="articles">
   <% for article in articles[0...3] %>
-    <article class="post">
-      <header>
+    <li class="post">
+      <div class="header">
         <h1><a href="<%= article.path %>"><%= article.title %></a></h1>
         <span class="date"><%= article.date %></span>
-      </header>
+      </div>
 
-      <section class="content">
+      <div class="content">
         <%= article.summary %>
-      </section>
+      </div>
       <div class="more"><a href="<%= article.path %>">read on &raquo;</a></div>
-    </article>
+    </li>
   <% end %>
-</section>
-
-<section id="archives">
-  <%= archives[3..-1] %>
-</section>
-
+</ul>
